--- a/bb-assessment/css/main.css
+++ b/bb-assessment/css/main.css
@@ -33,9 +33,19 @@
                 box-shadow:0 0 3px rgba(0,0,0,.6);
     }
 
+    .container{
+        max-width: 1170px;
+        margin:auto;
+    }
+    .row{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
     .page-wrap {
         margin:0 auto 120px;
         padding:7px 0 0;
+        overflow-x: hidden;
         max-width:1020px;
         background:#fff;
         -webkit-box-shadow:0 0 5px rgba(0,0,0,.3);
@@ -285,7 +295,7 @@
             background: linear-gradient(to right, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 15%,rgba(255,255,255,0) 85%,rgba(255,255,255,1) 100%), linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 10%,rgba(255,255,255,0) 100%), linear-gradient(-135deg, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 10%,rgba(255,255,255,0) 100%);
         }
 
-        .footer-top .page-footer__column { max-width:224px; }
+        .footer-top .page-footer__column { width: 17%; margin-right: 16px;}
         .page-footer__column h2,
         .page-footer__column .wysiwyg h2 {
             margin-top:25px;
@@ -302,6 +312,32 @@
         .footer-bottom p {
             margin:0 0 .8em;
             color:#999;
+        }
+        /*Responsive foooter*/
+        @media screen and (max-width: 767px) {
+            .page-footer__column {
+                width: 50%;
+            }
+            .page-footer__column h2,
+            .page-footer__column .wysiwyg h2 {
+            margin-top:25px;
+            margin-bottom:.3em;
+            font-size: 12;
+             
+            }
+
+        }
+        @media(max-width: 574px){
+            .page-footer__column{
+              width: 75% !important;
+          }
+          .page-footer__column h2,
+            .page-footer__column .wysiwyg h2 {
+            margin-top:25px;
+            margin-bottom:.3em;
+            font-size: 10;
+             
+            }
         }
 
         @media (min-width:64em) {
@@ -508,11 +544,24 @@
             padding-left: 1em;
         }
 
-        .header-toggles--mobile { color:#000; }
+        .mobile-nav {
+            display: none;
+            text-transform: uppercase;
+            padding: .5em 1em;
+            text-decoration: none;
+        }
+
+        .header-toggles--mobile { 
+            display: flex;
+            color:#000;
+            background: #42A5F5;
+        }
         .header-toggles--mobile a {
             display:inline-block;
             margin-left:5px;
             vertical-align:middle;
+            background: #42A5F5;
+            
         }
 
         .header-toggles--mobile .svg-icon {
@@ -523,6 +572,7 @@
         .menu-toggle {
             display:inline-block;
             position:relative;
+            font-size: 20px;
             width:32px;
             height:28px;
         }
@@ -590,6 +640,114 @@
             .main-navigation ul a { padding:.723em 1em; }
         }
 
+    /*MY SLIDE SHOW */
+    .mySlides {display: none}
+        img {vertical-align: middle;display:block;}
+
+        /* Slideshow container */
+        .slideshow-container {
+             max-width: 1000px;
+             position: relative;
+             margin: auto;
+        }
+        /* .slide__bg img { display:block; } */
+         figcaption {
+            position:absolute;
+            bottom:15px;
+            left:20px;
+            font-family:"Alex Brush", cursive;
+            font-size:18px;
+            font-size:1.125rem;
+            color: white;
+            background-color: #1b0808ba;
+            border-radius: 6px;
+        }
+        /* Next & previous buttons */
+        .prev, .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        padding: 16px;
+        margin-top: -22px;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+        }
+
+            /* Position the "next button" to the right */
+            .next {
+            right: 0;
+            border-radius: 3px 0 0 3px;
+            }
+
+            /* On hover, add a black background color with a little bit see-through */
+            .prev:hover, .next:hover {
+            background-color: rgba(0,0,0,0.8);
+            }
+
+            /* Caption text */
+            .text {
+            color: #f2f2f2;
+            font-size: 15px;
+            padding: 8px 12px;
+            position: absolute;
+            bottom: 8px;
+            width: 100%;
+            text-align: center;
+            }
+
+            /* Number text (1/3 etc) */
+            .numbertext {
+            color: #f2f2f2;
+            font-size: 12px;
+            padding: 8px 12px;
+            position: absolute;
+            top: 0;
+            }
+
+            /* The dots/bullets/indicators */
+            .dot {
+            cursor: pointer;
+            height: 15px;
+            width: 15px;
+            margin: 0 2px;
+            background-color: #bbb;
+            border-radius: 50%;
+            display: inline-block;
+            transition: background-color 0.6s ease;
+            }
+
+            .active, .dot:hover {
+            background-color: #717171;
+            }
+
+            /* Fading animation */
+            .fade {
+            -webkit-animation-name: fade;
+            -webkit-animation-duration: 1.5s;
+            animation-name: fade;
+            animation-duration: 1.5s;
+            }
+
+            @-webkit-keyframes fade {
+            from {opacity: .4} 
+            to {opacity: 1}
+            }
+
+            @keyframes fade {
+            from {opacity: .4} 
+            to {opacity: 1}
+            }
+
+            /* On smaller screens, decrease text size */
+            @media only screen and (max-width: 300px) {
+            .prev, .next,.text {font-size: 11px}
+            }    
+
     /*----- SLIDESHOW -----*/
         .slideshow { margin:0 -15px; }
         .slideshow__slide {
@@ -622,7 +780,43 @@
             width:300px;
             text-align:center;
             line-height:1.1;
+            background-color: #f4f4f48f;
         }
+
+                /*Responsive foooter*/
+                @media screen and (max-width: 820px) {
+                    .slide__content {
+                        position:absolute;
+                        height: 190px;
+                        top: 18px; 
+                        padding:10px;
+                        width:80%;
+                        text-align:center;
+                        line-height:1.1;
+                        background-color: #f4f4f48f;
+                    }
+        
+                }
+
+                @media screen and (max-width: 630px) {
+                    .slide__content {
+                        position:absolute;
+                        height: 120px;
+                        top: 4px;   
+                        padding:10px;
+                        width:70%;
+                        text-align:center;
+                        line-height:1.1;
+                        background-color: #f4f4f48f;
+                    }
+                    h2.cta__title {
+                        font-size: 30px;
+                    }
+                    p.cta__description {
+                        font-size: 13px;
+                    }
+        
+                }
         .cta:hover, .cta:focus { text-decoration:none; }
         .cta__title {
             margin:0;
@@ -675,7 +869,34 @@
                 width:240px;
             }
         }
+        /*---------Accordion--------*/
+        .accordion-expander {
+            margin-bottom: 40px;
+        }
+        .accordion {
+            color: #7494b7;
+            cursor: pointer;
+            padding: 18px;
+            width: 100%;
+            border: none;
+            text-align: left;
+            outline: none;
+            font-size: 22px;
+            transition: 0.4s;
+          }
+          
+          .active, .accordion:hover {
+            background-color: #ccc; 
+          }
+          
+          .panel {
+            padding: 0 18px;
+            display: none;
+            background-color: white;
+            overflow: hidden;
+          }
 
+          
     /*----- WYSIWYG -----*/
 
         .wysiwyg h2 { margin:0; }
@@ -693,7 +914,7 @@
 
     /*----- NEWSLETTER FORM -----*/
 
-        .newsletter p { font-style:italic;
+        .newsletter p { font-style:italic;}
 
         .newsletter__form {
             display:-webkit-box;
@@ -705,7 +926,7 @@
             margin-right:10px;
             min-width:0;
         }
-
+    
     /*----- COPYRIGHT -----*/
 
         .copyright a { margin-left:5px; padding-left:5px; border-left:1px solid currentColor; }
